# cloudly-dynamodb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
cloudlydb/core/: dynamodb.py  tasks.py  utils.py
cloudlydb/db/: dynamodb.py  tasks.py
cloudlydb/models/: __init__.py  base.py  model.py
tests/: conftest.py  test_accumalator_command.py  test_query_command.py  test_stats_merge.py  test_update_command.py
tests/models/: test_model.py  test_model_persistence.py
