[tool.poetry]
name = "cloudlydb"
version = "0.0.3"
description = ""
authors = ["Nana Duah <gabano2005@gmail.com>"]
readme = "README.md"
packages = [{include = "cloudlydb"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
